--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
+
+# bd
+src/main/resources/application.properties
